# rabbitmq-event-driven

./: README.md
lib/: pyproject.toml
lib/event_driven/: events_driven_utils.py  events_initialization.py  exceptions.py  utils.py
lib/event_driven/examples/: fastapi_response_model_example.py  model.py  test_crud.sh
lib/event_driven/message/: creation.py  processing.py
lib/event_driven_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rabbitmq_service/: Dockerfile  config.yaml  docker-compose.yaml  main.py  models.py  requirements.txt  service.py
rabbitmq_service/tests/: config.yaml  config_receiver.yaml  test_fastapi.py  test_service.py  test_stop_business_error.py  test_stop_creation.py  test_stop_subscriber.py  test_stop_technical_error.py
