[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "event-driven-utils"
version = "0.1.0"
authors = [
  { name="Nikita Bolshakov", email="bxxlshakxxv@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5.2",
    "pydantic-core>=2.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["examples*", "tests*"] 